--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -1,5 +1,5 @@
 .hero-wrapper {
-  @apply w-screen bg-cover flex justify-center items-center top-0 left-0 right-0 mb-28 shadow-lg;
+  @apply flex justify-center items-center mb-28 shadow-lg;
 }
 
 .hero-wrapper> *{
