--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@
 
 body {
   background-color: rgb(247, 245, 255);
+  width: 100vh;
 }
 
 h1 {
